Add vietnamese dashboard translations

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -1,158 +1,155 @@
 {
-    "%d Total children under 2": "%d Trẻ em dưới 2 tuổi",
-    "%d Total children under 5": "%d Trẻ em dưới 5 tuổi",
-    "%d Total pregnancies": "Tổng số bà mẹ mang thai trong khu vực: %d",
-    "%d Total Pregnancies due in 1 week": "Bà mẹ dự kiến đẻ trong vòng 7 ngày tới: %d",
-    "%d Total Pregnancies due in 2 weeks": "Bà mẹ dự kiến đẻ trong vòng 2 tuần tới: %d",
-    "Admin": "",
+    "%d Total children under 2": "%d trẻ em dưới 2 tuổi",
+    "%d Total children under 5": "%d trẻ em dưới 5 tuổi",
+    "%d Total pregnancies": " %d thai phụ",
+    "%d Total Pregnancies due in 1 week": "%d thai phụ dự kiến đẻ trong vòng 7 ngày tới",
+    "%d Total Pregnancies due in 2 weeks": "%d thai phụ dự kiến đẻ trong vòng 2 tuần tới",
+    "Admin": "Quản trị viên",
     "Age": "Tuổi",
-    "age.days": "",
+    "age.days": "ngày",
     "age.months": "tháng",
-    "age.years": "Tuổi",
-    "All clients": "",
-    "An error occurred": "",
+    "age.years": "tuổi",
+    "All clients": "Xem toàn bộ",
+    "An error occurred": "Hệ thống đang bị lỗi. Vui lòng thử lại sau.",
     "Analysis": "Báo cáo phân tích",
-    "ANC": "",
+    "ANC": "HỢP PHẦN THAI SẢN",
     "April": "Tháng Tư",
     "August": "Tháng Tám",
     "Back": "Quay lại",
     "Basic Information": "Thông tin Cơ bản",
     "Blood pressure": "Huyết áp",
-    "Chart could not load, an error occurred.": "Chưa có thông tin",
-    "Child": "",
-    "Client Records": "",
-    "cm": "",
-    "commune": "xã",
-    "Commune": "Xã",
-    "communes": "",
+    "Chart could not load, an error occurred.": "Hệ thống đang bị lỗi. Vui lòng thử lại sau.",
+    "Child": "Trẻ",
+    "Client Records": "Hồ sơ Đối tượng",
+    "cm": "cm",
+    "commune": "xã/phường",
+    "Commune": "Xã/phường",
+    "communes": "Danh sách xã/phường",
     "Compartments": "Phân loại Nguy cơ",
-    "could not find any edd": "Chưa có thông tin",
-    "Current Blood Pressure": "",
-    "Current EDD": "",
+    "Current EDD": "Ngày đẻ dự kiến",
     "Current Gravidity": "Số lần đã mang thai",
-    "Current Height": "",
-    "Current MUAC": "",
+    "Current Height": "Chiều cao",
     "Current Parity": "Số lần đã đẻ",
-    "Current pregnancy": "",
+    "Current pregnancy": "Lần mang thai hiện tại",
+    "Current Risk categorization": "Phân loại nguy cơ",
+    "Current risks": "Nguy cơ",
     "Current Symptoms": "Triệu chứng hiện tại",
-    "Current Weight": "",
+    "Current Weight": "Cân nặng",
     "Date": "Ngày",
-    "Days Since Birth": "",
+    "Days Since Birth": "Tuổi",
     "December": "Tháng Mười hai",
+    "Delivery plan/ Location of delivery": "Nơi đẻ dự kiến/Nơi đẻ",
     "Display of all messages received from MIECD in chronological order": "Tổng hợp những cập nhật mới nhất được gửi tới hệ thống",
-    "district": "huyện",
-    "District": "Huyện",
-    "districts": "",
+    "district": "quận/huyện",
+    "District": "Quận/huyện",
+    "districts": "Danh sách quận/huyện",
     "EDD": "Ngày đẻ dự kiến",
     "Ethnicity": "Dân tộc",
     "Event Date": "Ngày",
     "Export data": "Tải về",
     "February": "Tháng Hai",
-    "Gender": "",
-    "HandWashing": "Chỗ rửa tay",
+    "Go to": "Tới trang",
+    "HandWashing": "Chỗ rửa tay có xà phòng",
     "Health Insurance number": "Số bảo hiểm",
     "Home": "Trang chủ",
-    "Household": "",
+    "Household": "Hộ nghèo",
     "Household Type": "Hộ nghèo",
-    "Important analysis and indicators generated from collected data": "Những chỉ số và phân tích quan trọng liên quan tới sức khỏe của các bà mẹ đang mang thai trong khu vực",
+    "Important analysis and indicators generated from collected data": "Các chỉ số và phân tích quan trọng",
     "Inappropriate Feeding": "Chế độ ăn không phù hợp",
     "January": "Tháng Một ",
     "July": "Tháng Bảy",
     "June": "Tháng Sáu",
-    "kg": "",
+    "kg": "kg",
     "Location": "Địa điểm",
-    "Location Of Birth": "",
-    "Location Of Residence": "",
-    "Locations": "",
-    "Log face": "danh sách tin nhắn",
+    "Location Of Birth": "Nơi đẻ",
+    "Location Of Residence": "Nơi ở",
+    "Locations": "Danh sách địa điểm",
+    "Log face": "Danh sách tin nhắn",
     "Log Face": "Danh sách tin nhắn",
-    "Login": "",
+    "Login": "Đăng nhập",
     "March": "Tháng Ba",
     "May": "Tháng Năm",
     "Message": "Nội dung báo cáo",
     "Mother's weight": "Cân nặng",
-    "Mother’s Blood pressure tracking": "Theo dõi Huyết áp bà mẹ",
-    "Mother’s weight tracking": "Theo dõi Cân nặng bà mẹ",
+    "Mother’s Blood pressure tracking": "Theo dõi Huyết áp thai phụ",
+    "Mother’s weight tracking": "Theo dõi Cân nặng thai phụ",
     "N/A": "Chưa có thông tin",
-    "Name": "Tên",
-    "NBC & PNC": "SAU SINH",
-    "Network response was not ok": "",
+    "NBC & PNC": "HỢP PHẦN SAU SINH",
+    "Network response was not ok": "Phản hồi hệ thống không ổn định. Xin vui lòng thử lại sau.",
     "next": "Tiếp",
-    "No chart data found": "",
+    "No chart data found": "Chưa có thông tin",
     "No data found": "Không tìm thấy kết quả phù hợp",
-    "No Patient Level data to show for this commune": "Xã/phường này hiện không có Bà mẹ mang thai nào thuộc nhóm đã chọn",
-    "No providers": "",
-    "No risk": "",
-    "Normal": "Tháng Mười một",
-    "November": "",
-    "Nutrition": "DINH DƯỠNG",
-    "October": "Tháng Mười ",
-    "OpenSRP": "",
-    "Overweight": "Trẻ Quá cân",
-    "Patient": "Bà mẹ",
-    "Patient Details": "Thông tin Bà mẹ",
-    "Patient ID": "Bà mẹ",
-    "Planned Delivery Location": "",
-    "Pregnancy": "THAI SẢN",
-    "Pregnancy %d": "",
+    "No Patient Level data to show for this commune": "Xã/phường này hiện không có đối tượng nào thuộc nhóm đã chọn",
+    "No providers": "Chưa có thông tin",
+    "No risk": "Bình thường",
+    "Normal": "Bình thường",
+    "November": "Tháng Mười một",
+    "Nutrition": "HỢP PHẦN DINH DƯỠNG",
+    "October": "Tháng Mười",
+    "OpenSRP": "OpenSRP",
+    "Overweight": "Trẻ thừa cân",
+    "Page": "Trang",
+    "Patient": "Đối tượng",
+    "Patient Details": "Hồ sơ đối tượng",
+    "Patient ID": "Mã số",
+    "Planned Delivery Location": "Nơi đẻ dự kiến",
+    "Pregnancy": "HỢP PHẦN THAI SẢN",
+    "Pregnancy %d": "Lần mang thai %d",
     "previous": "Trước",
-    "Previous Pregnancy Risk": "",
-    "Previous Risks / Existing Medical Conditions": "",
-    "province": "tỉnh",
-    "Province": "Tỉnh",
-    "provinces": "",
+    "Previous Risks / Existing Medical Conditions": "Tiền sử sản khoa / Nguy cơ hiện có",
+    "Previous risks and Existing conditions": "Tiền sử sản khoa và Nguy cơ hiện có",
+    "province": "tỉnh/thành phố",
+    "Province": "Tỉnh/thành phố",
+    "provinces": "Danh sách tỉnh/thành phố",
     "Red alert": "Báo động đỏ",
-    "Report": "Loại báo cáo",
+    "Report": "Báo cáo",
     "Reporter": "Người gửi",
-    "Reports": "",
-    "risk": "",
-    "Risk": "",
-    "risk categorization": "Phân loại nguy cơ",
-    "Risk Category": "",
-    "Risk Level": "Phân loại Nguy cơ Chọn",
-    "Roles": "",
+    "Reports": "Báo cáo",
+    "risk": "nguy cơ",
+    "Risk": "Nguy cơ",
+    "Risk Category": "Phân loại Nguy cơ",
+    "Risk Level": "Phân loại Nguy cơ",
+    "Roles": "Vai trò",
     "Search ID, Reporter, Patients": "Tìm kiếm",
-    "Select location": "Địa điểm Chọn",
-    "Select Location": "",
-    "Select pregnancy": "",
-    "Select risk": "Phân loại Nguy cơ Chọn",
-    "Select type": "Loại tin nhắn Chọn",
+    "Select location": "Chọn Địa điểm",
+    "Select Location": "Chọn Địa điểm",
+    "Select pregnancy": "Chọn Lần mang thai",
+    "Select risk": "Chọn Phân loại Nguy cơ",
+    "Select type": "Chọn Loại tin nhắn",
     "September": "Tháng Chín",
-    "Severe wasting": "",
-    "Showing reports for:&emsp;": "Xem báo cáo của:&emsp;",
+    "Severe wasting": "Trẻ Gầy còm (cấp tính)",
+    "Showing reports for:&emsp;": "Xem báo cáo:&emsp;",
     "Sign Out": "Thoát",
+    "SMS ID": "Mã tin nhắn",
     "SMS Type": "Loại báo cáo",
-    "Stunted": "",
+    "Stunted": "Trẻ Thấp còi",
     "Stunting": "Trẻ Thấp còi",
-    "Teams": "",
-    "The %s %s doesn't seem to have %s": "",
-    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "Theo dõi tình trạng sức khỏe từ lúc phát hiện mang thai tới lúc đẻ của các bà mẹ trong khu vực.<1>Cùng góp sức đảm bảo Không bà mẹ nào tử vong vì sinh nở…</1>",
-    "This is the aggregation and categorization of patients data": "Theo dõi các bà mẹ thuộc nhóm nguy cơ và sắp tới ngày đẻ",
+    "Teams": "Nhóm",
+    "The %s %s doesn't seem to have %s": "%s %s không có %s",
+    "This is the aggregation and categorization of patients data": "Theo dõi phân loại nguy cơ của các đối tượng trong khu vực",
     "Toilet": "Nhà vệ sinh",
     "Total": "Tổng",
-    "Total %s": "",
-    "Total mother in PNC": "Tổng số bà mẹ mới đẻ",
+    "Total %s": "Tổng số %s",
+    "Total mother in PNC": "Tổng số bà mẹ mới đẻ trong khu vực",
     "Total newborn": "Tổng số trẻ sơ sinh trong khu vực",
     "total_mother_in_pnc.%d %s": "%s %d",
     "total_newborn.%d %s": "%s %d",
-    "Type": "Loại tin nhắn Chọn",
-    "Underweight": "",
-    "Users": "",
+    "Type": "Loại tin nhắn",
+    "Underweight": "Trẻ Nhẹ cân",
+    "Users": "Danh sách người dùng",
     "View": "Xem",
-    "View the latest message updates about your patients.": "Quản lý sức khỏe các bà mẹ đang mang thai trong khu vực",
-    "Village": "Thôn",
-    "villages": "",
-    "Wasting": "Trẻ Gầy còm",
-    "Weight": "",
-    "Weight and Height": "",
-    "Weight and Height Tracking": "",
-    "Welcome back, %s": "",
-    "Welcome to Newborn and Postnatal Care": "Hợp phần Dinh dưỡng",
-    "Welcome to Nutrition Care": "",
-    "Welcome to the MIECD dashboard": "Chào mừng bạn đến với trang chủ MIECD Phần mềm Quản lý Sức khỏe Bà mẹ và Trẻ",
-    "Welcome to the pregnancy dashboard": "Hợp phần Thai sản ",
+    "View the latest message updates about your patients.": "Xem mới nhất",
+    "Village": "Thôn/làng/bản",
+    "villages": "Danh sách thôn/làng/bản",
+    "Wasting": "Trẻ Gầy còm (cấp tính)",
+    "Weight": "Cân nặng",
+    "Weight and height": "Cân nặng và chiều cao",
+    "Weight and height tracking": "Theo dõi cân nặng và chiều cao",
+    "Welcome back, %s": "Xin chào, %s",
+    "Welcome to Newborn and Postnatal Care": "Chào mừng đến với Hợp phần Sau sinh",
+    "Welcome to Nutrition Care": "Chào mừng đến với Hợp phần Dinh dưỡng",
+    "Welcome to the MIECD dashboard": "Chào mừng bạn đến với trang chủ MIECD - Phần mềm Quản lý Sức khỏe Mẹ và Trẻ",
+    "Welcome to the pregnancy dashboard": "Chào mừng đến với Hợp phần Thai sản ",
     "Total mother in PNC_plural": "Tổng số bà mẹ mới đẻ trong khu vực",
-    "Total newborn_plural": "Tổng số trẻ sơ sinh:",
-    "NBC & PNC_CHILD": "",
-    "NBC & PNC_WOMAN": ""
+    "Total newborn_plural": "Tổng số trẻ sơ sinh trong khu vực"
 }
