Update locale files

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,36 +9,38 @@
     "age.days": "days",
     "age.months": "months",
     "age.years": "years",
-    "All clients": "",
     "An error occurred": "",
     "Analysis": "",
-    "ANC": "",
+    "ANC Visit": "",
     "April": "",
     "August": "",
     "Back": "",
     "Basic Information": "",
+    "Birth Report": "",
     "Blood pressure": "",
     "Chart could not load, an error occurred.": "",
-    "Child": "",
-    "Client Records": "",
     "cm": "",
     "commune": "",
     "Commune": "",
     "communes": "",
     "Compartments": "",
-    "could not find any edd": "",
-    "Current Blood Pressure": "",
     "Current EDD": "",
     "Current Gravidity": "",
     "Current Height": "",
-    "Current MUAC": "",
     "Current Parity": "",
     "Current pregnancy": "",
+    "Current Risk categorization": "",
+    "Current risks": "",
     "Current Symptoms": "",
     "Current Weight": "",
     "Date": "",
     "Days Since Birth": "",
+    "Death Report": "",
     "December": "",
+    "Delivery plan/ Location of delivery": "",
+    "Delivery Planning": "",
+    "Departure Code": "",
+    "Departure Report": "",
     "Display of all messages received from MIECD in chronological order": "",
     "district": "",
     "District": "",
@@ -48,11 +50,10 @@
     "Event Date": "",
     "Export data": "",
     "February": "",
-    "Gender": "",
     "HandWashing": "",
     "Health Insurance number": "",
     "Home": "",
-    "Household": "",
+    "Home ANC Visit": "",
     "Household Type": "",
     "Important analysis and indicators generated from collected data": "",
     "Inappropriate Feeding": "",
@@ -63,7 +64,8 @@
     "Location": "",
     "Location Of Birth": "",
     "Location Of Residence": "",
-    "Locations": "",
+    "Location unit": "",
+    "Location unit group": "",
     "Log face": "",
     "Log Face": "",
     "Login": "",
@@ -72,11 +74,11 @@
     "Message": "",
     "Mother's weight": "",
     "Mother’s Blood pressure tracking": "",
-    "Mother’s weight tracking ": "",
+    "Mother’s weight tracking": "",
     "N/A": "",
-    "Name": "",
     "NBC & PNC": "",
     "Network response was not ok": "",
+    "Newborn Report": "",
     "next": "",
     "No chart data found": "",
     "No data found": "",
@@ -86,6 +88,7 @@
     "Normal": "",
     "November": "",
     "Nutrition": "",
+    "Nutrition Registration": "",
     "October": "",
     "OpenSRP": "",
     "Overweight": "",
@@ -93,24 +96,28 @@
     "Patient Details": "",
     "Patient ID": "",
     "Planned Delivery Location": "",
+    "PNC Report": "",
+    "Postnatal and Newborn Care": "",
     "Pregnancy": "",
     "Pregnancy %d": "",
+    "Pregnancy Detection": "",
+    "Pregnancy Registration": "",
     "previous": "",
-    "Previous Pregnancy Risk": "",
     "Previous Risks / Existing Medical Conditions": "",
+    "Previous risks and Existing conditions": "",
     "province": "",
     "Province": "",
     "provinces": "",
     "Red alert": "",
+    "Red Alert Report": "",
+    "Refusal Report": "",
     "Report": "",
     "Reporter": "",
-    "Reports": "",
+    "Response Report": "",
     "risk": "",
     "Risk": "",
-    "risk categorization": "",
     "Risk Category": "",
     "Risk Level": "",
-    "Roles": "",
     "Search ID, Reporter, Patients": "",
     "Select location": "",
     "Select Location": "",
@@ -121,10 +128,14 @@
     "Severe wasting": "",
     "Showing reports for:&emsp;": "Showing reports for:&emsp;",
     "Sign Out": "",
+    "SMS ID": "",
     "SMS Type": "",
+    "Social Determinants": "",
     "Stunted": "",
     "Stunting": "",
+    "Team management": "",
     "Teams": "",
+    "Teams assignment": "",
     "The %s %s doesn't seem to have %s": "",
     "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>",
     "This is the aggregation and categorization of patients data": "",
@@ -132,13 +143,18 @@
     "Total": "",
     "Total %s": "",
     "Total mother in PNC": "",
-    "Total mother in PNC_plural": "",
+    "Total mother in PNC_plural": "Total mothers in PNC",
     "Total newborn": "",
     "Total newborn_plural": "Total newborns",
-    "total_mother_in_pnc.%d %s": "%d %s",
-    "total_newborn.%d %s": "%d %s",
+    "total_mother_in_pnc.{0} {1}": "{0} {1}",
+    "total_newborn.{0} {1}": "{0} {1}",
     "Type": "",
     "Underweight": "",
+    "Update Nutrition Registration": "",
+    "Update Pregnancy Detection": "",
+    "User groups": "",
+    "User Management": "",
+    "User roles": "",
     "Users": "",
     "View": "",
     "View the latest message updates about your patients.": "",
@@ -146,8 +162,8 @@
     "villages": "",
     "Wasting": "",
     "Weight": "",
-    "Weight and Height": "",
-    "Weight and Height Tracking": "",
+    "Weight and height": "",
+    "Weight and height tracking": "",
     "Welcome back, %s": "",
     "Welcome to Newborn and Postnatal Care": "",
     "Welcome to Nutrition Care": "",
