--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -1,26 +1,24 @@
 {
-    "%d Total children under 2": "%d trẻ em dưới 2 tuổi",
-    "%d Total children under 5": "%d trẻ em dưới 5 tuổi",
-    "%d Total pregnancies": " %d thai phụ",
-    "%d Total Pregnancies due in 1 week": "%d thai phụ dự kiến đẻ trong vòng 7 ngày tới",
-    "%d Total Pregnancies due in 2 weeks": "%d thai phụ dự kiến đẻ trong vòng 2 tuần tới",
-    "Admin": "Quản trị viên",
+    "{0} Total children under 2": "{0} trẻ em dưới 2 tuổi",
+    "{0} Total children under 5": "{0} trẻ em dưới 5 tuổi",
+    "{0} Total pregnancies": "{0} thai phụ",
+    "{0} Total Pregnancies due in 1 week": "{0} thai phụ dự kiến đẻ trong vòng 7 ngày tới",
+    "{0} Total Pregnancies due in 2 weeks": "{0} thai phụ dự kiến đẻ trong vòng 2 tuần tới",
+    "Admin": "",
     "Age": "Tuổi",
     "age.days": "ngày",
     "age.months": "tháng",
     "age.years": "tuổi",
-    "All clients": "Xem toàn bộ",
     "An error occurred": "Hệ thống đang bị lỗi. Vui lòng thử lại sau.",
     "Analysis": "Báo cáo phân tích",
-    "ANC": "HỢP PHẦN THAI SẢN",
+    "ANC Visit": "",
     "April": "Tháng Tư",
     "August": "Tháng Tám",
     "Back": "Quay lại",
     "Basic Information": "Thông tin Cơ bản",
+    "Birth Report": "",
     "Blood pressure": "Huyết áp",
     "Chart could not load, an error occurred.": "Hệ thống đang bị lỗi. Vui lòng thử lại sau.",
-    "Child": "Trẻ",
-    "Client Records": "Hồ sơ Đối tượng",
     "cm": "cm",
     "commune": "xã/phường",
     "Commune": "Xã/phường",
@@ -37,8 +35,12 @@
     "Current Weight": "Cân nặng",
     "Date": "Ngày",
     "Days Since Birth": "Tuổi",
+    "Death Report": "",
     "December": "Tháng Mười hai",
     "Delivery plan/ Location of delivery": "Nơi đẻ dự kiến/Nơi đẻ",
+    "Delivery Planning": "",
+    "Departure Code": "",
+    "Departure Report": "",
     "Display of all messages received from MIECD in chronological order": "Tổng hợp những cập nhật mới nhất được gửi tới hệ thống",
     "district": "quận/huyện",
     "District": "Quận/huyện",
@@ -48,11 +50,10 @@
     "Event Date": "Ngày",
     "Export data": "Tải về",
     "February": "Tháng Hai",
-    "Go to": "Tới trang",
     "HandWashing": "Chỗ rửa tay có xà phòng",
     "Health Insurance number": "Số bảo hiểm",
     "Home": "Trang chủ",
-    "Household": "Hộ nghèo",
+    "Home ANC Visit": "",
     "Household Type": "Hộ nghèo",
     "Important analysis and indicators generated from collected data": "Các chỉ số và phân tích quan trọng",
     "Inappropriate Feeding": "Chế độ ăn không phù hợp",
@@ -63,7 +64,8 @@
     "Location": "Địa điểm",
     "Location Of Birth": "Nơi đẻ",
     "Location Of Residence": "Nơi ở",
-    "Locations": "Danh sách địa điểm",
+    "Location unit": "",
+    "Location unit group": "",
     "Log face": "Danh sách tin nhắn",
     "Log Face": "Danh sách tin nhắn",
     "Login": "Đăng nhập",
@@ -76,6 +78,7 @@
     "N/A": "Chưa có thông tin",
     "NBC & PNC": "HỢP PHẦN SAU SINH",
     "Network response was not ok": "Phản hồi hệ thống không ổn định. Xin vui lòng thử lại sau.",
+    "Newborn Report": "",
     "next": "Tiếp",
     "No chart data found": "Chưa có thông tin",
     "No data found": "Không tìm thấy kết quả phù hợp",
@@ -85,16 +88,20 @@
     "Normal": "Bình thường",
     "November": "Tháng Mười một",
     "Nutrition": "HỢP PHẦN DINH DƯỠNG",
+    "Nutrition Registration": "",
     "October": "Tháng Mười",
     "OpenSRP": "OpenSRP",
     "Overweight": "Trẻ thừa cân",
-    "Page": "Trang",
     "Patient": "Đối tượng",
     "Patient Details": "Hồ sơ đối tượng",
     "Patient ID": "Mã số",
     "Planned Delivery Location": "Nơi đẻ dự kiến",
+    "PNC Report": "",
+    "Postnatal and Newborn Care": "",
     "Pregnancy": "HỢP PHẦN THAI SẢN",
-    "Pregnancy %d": "Lần mang thai %d",
+    "Pregnancy {0}": "Lần mang thai {0}",
+    "Pregnancy Detection": "",
+    "Pregnancy Registration": "",
     "previous": "Trước",
     "Previous Risks / Existing Medical Conditions": "Tiền sử sản khoa / Nguy cơ hiện có",
     "Previous risks and Existing conditions": "Tiền sử sản khoa và Nguy cơ hiện có",
@@ -102,14 +109,15 @@
     "Province": "Tỉnh/thành phố",
     "provinces": "Danh sách tỉnh/thành phố",
     "Red alert": "Báo động đỏ",
+    "Red Alert Report": "",
+    "Refusal Report": "",
     "Report": "Báo cáo",
     "Reporter": "Người gửi",
-    "Reports": "Báo cáo",
+    "Response Report": "",
     "risk": "nguy cơ",
     "Risk": "Nguy cơ",
     "Risk Category": "Phân loại Nguy cơ",
     "Risk Level": "Phân loại Nguy cơ",
-    "Roles": "Vai trò",
     "Search ID, Reporter, Patients": "Tìm kiếm",
     "Select location": "Chọn Địa điểm",
     "Select Location": "Chọn Địa điểm",
@@ -122,20 +130,29 @@
     "Sign Out": "Thoát",
     "SMS ID": "Mã tin nhắn",
     "SMS Type": "Loại báo cáo",
+    "Social Determinants": "",
     "Stunted": "Trẻ Thấp còi",
     "Stunting": "Trẻ Thấp còi",
+    "Team management": "",
     "Teams": "Nhóm",
-    "The %s %s doesn't seem to have %s": "%s %s không có %s",
+    "Teams assignment": "",
+    "The {0} {1} doesn't seem to have {2}": "{0} {1} không có {2}",
+    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>",
     "This is the aggregation and categorization of patients data": "Theo dõi phân loại nguy cơ của các đối tượng trong khu vực",
     "Toilet": "Nhà vệ sinh",
     "Total": "Tổng",
-    "Total %s": "Tổng số %s",
+    "Total {0}": "Tổng số  {0}",
     "Total mother in PNC": "Tổng số bà mẹ mới đẻ trong khu vực",
     "Total newborn": "Tổng số trẻ sơ sinh trong khu vực",
-    "total_mother_in_pnc.%d %s": "%s %d",
-    "total_newborn.%d %s": "%s %d",
+    "total_mother_in_pnc.{0} {1}": "{1} {0}",
+    "total_newborn.{0} {1}": "{1} {0}",
     "Type": "Loại tin nhắn",
     "Underweight": "Trẻ Nhẹ cân",
+    "Update Nutrition Registration": "",
+    "Update Pregnancy Detection": "",
+    "User groups": "",
+    "User Management": "",
+    "User roles": "",
     "Users": "Danh sách người dùng",
     "View": "Xem",
     "View the latest message updates about your patients.": "Xem mới nhất",
@@ -145,7 +162,7 @@
     "Weight": "Cân nặng",
     "Weight and height": "Cân nặng và chiều cao",
     "Weight and height tracking": "Theo dõi cân nặng và chiều cao",
-    "Welcome back, %s": "Xin chào, %s",
+    "Welcome back, {0}": "Xin chào, {0}",
     "Welcome to Newborn and Postnatal Care": "Chào mừng đến với Hợp phần Sau sinh",
     "Welcome to Nutrition Care": "Chào mừng đến với Hợp phần Dinh dưỡng",
     "Welcome to the MIECD dashboard": "Chào mừng bạn đến với trang chủ MIECD - Phần mềm Quản lý Sức khỏe Mẹ và Trẻ",
