Update vietname locales

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -4,19 +4,16 @@
     "{0} Total pregnancies": "{0} thai phụ",
     "{0} Total Pregnancies due in 1 week": "{0} thai phụ dự kiến đẻ trong vòng 7 ngày tới",
     "{0} Total Pregnancies due in 2 weeks": "{0} thai phụ dự kiến đẻ trong vòng 2 tuần tới",
-    "Admin": "",
     "Age": "Tuổi",
     "age.days": "ngày",
     "age.months": "tháng",
     "age.years": "tuổi",
     "An error occurred": "Hệ thống đang bị lỗi. Vui lòng thử lại sau.",
     "Analysis": "Báo cáo phân tích",
-    "ANC Visit": "",
     "April": "Tháng Tư",
     "August": "Tháng Tám",
     "Back": "Quay lại",
     "Basic Information": "Thông tin Cơ bản",
-    "Birth Report": "",
     "Blood pressure": "Huyết áp",
     "Chart could not load, an error occurred.": "Hệ thống đang bị lỗi. Vui lòng thử lại sau.",
     "cm": "cm",
@@ -35,12 +32,8 @@
     "Current Weight": "Cân nặng",
     "Date": "Ngày",
     "Days Since Birth": "Tuổi",
-    "Death Report": "",
     "December": "Tháng Mười hai",
     "Delivery plan/ Location of delivery": "Nơi đẻ dự kiến/Nơi đẻ",
-    "Delivery Planning": "",
-    "Departure Code": "",
-    "Departure Report": "",
     "Display of all messages received from MIECD in chronological order": "Tổng hợp những cập nhật mới nhất được gửi tới hệ thống",
     "district": "quận/huyện",
     "District": "Quận/huyện",
@@ -53,7 +46,6 @@
     "HandWashing": "Chỗ rửa tay có xà phòng",
     "Health Insurance number": "Số bảo hiểm",
     "Home": "Trang chủ",
-    "Home ANC Visit": "",
     "Household Type": "Hộ nghèo",
     "Important analysis and indicators generated from collected data": "Các chỉ số và phân tích quan trọng",
     "Inappropriate Feeding": "Chế độ ăn không phù hợp",
@@ -64,8 +56,6 @@
     "Location": "Địa điểm",
     "Location Of Birth": "Nơi đẻ",
     "Location Of Residence": "Nơi ở",
-    "Location unit": "",
-    "Location unit group": "",
     "Log face": "Danh sách tin nhắn",
     "Log Face": "Danh sách tin nhắn",
     "Login": "Đăng nhập",
@@ -78,7 +68,6 @@
     "N/A": "Chưa có thông tin",
     "NBC & PNC": "HỢP PHẦN SAU SINH",
     "Network response was not ok": "Phản hồi hệ thống không ổn định. Xin vui lòng thử lại sau.",
-    "Newborn Report": "",
     "next": "Tiếp",
     "No chart data found": "Chưa có thông tin",
     "No data found": "Không tìm thấy kết quả phù hợp",
@@ -88,7 +77,6 @@
     "Normal": "Bình thường",
     "November": "Tháng Mười một",
     "Nutrition": "HỢP PHẦN DINH DƯỠNG",
-    "Nutrition Registration": "",
     "October": "Tháng Mười",
     "OpenSRP": "OpenSRP",
     "Overweight": "Trẻ thừa cân",
@@ -96,12 +84,8 @@
     "Patient Details": "Hồ sơ đối tượng",
     "Patient ID": "Mã số",
     "Planned Delivery Location": "Nơi đẻ dự kiến",
-    "PNC Report": "",
-    "Postnatal and Newborn Care": "",
     "Pregnancy": "HỢP PHẦN THAI SẢN",
     "Pregnancy {0}": "Lần mang thai {0}",
-    "Pregnancy Detection": "",
-    "Pregnancy Registration": "",
     "previous": "Trước",
     "Previous Risks / Existing Medical Conditions": "Tiền sử sản khoa / Nguy cơ hiện có",
     "Previous risks and Existing conditions": "Tiền sử sản khoa và Nguy cơ hiện có",
@@ -109,11 +93,8 @@
     "Province": "Tỉnh/thành phố",
     "provinces": "Danh sách tỉnh/thành phố",
     "Red alert": "Báo động đỏ",
-    "Red Alert Report": "",
-    "Refusal Report": "",
     "Report": "Báo cáo",
     "Reporter": "Người gửi",
-    "Response Report": "",
     "risk": "nguy cơ",
     "Risk": "Nguy cơ",
     "Risk Category": "Phân loại Nguy cơ",
@@ -130,12 +111,9 @@
     "Sign Out": "Thoát",
     "SMS ID": "Mã tin nhắn",
     "SMS Type": "Loại báo cáo",
-    "Social Determinants": "",
     "Stunted": "Trẻ Thấp còi",
     "Stunting": "Trẻ Thấp còi",
-    "Team management": "",
     "Teams": "Nhóm",
-    "Teams assignment": "",
     "The {0} {1} doesn't seem to have {2}": "{0} {1} không có {2}",
     "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>",
     "This is the aggregation and categorization of patients data": "Theo dõi phân loại nguy cơ của các đối tượng trong khu vực",
@@ -148,11 +126,6 @@
     "total_newborn.{0} {1}": "{1} {0}",
     "Type": "Loại tin nhắn",
     "Underweight": "Trẻ Nhẹ cân",
-    "Update Nutrition Registration": "",
-    "Update Pregnancy Detection": "",
-    "User groups": "",
-    "User Management": "",
-    "User roles": "",
     "Users": "Danh sách người dùng",
     "View": "Xem",
     "View the latest message updates about your patients.": "Xem mới nhất",
@@ -168,5 +141,33 @@
     "Welcome to the MIECD dashboard": "Chào mừng bạn đến với trang chủ MIECD - Phần mềm Quản lý Sức khỏe Mẹ và Trẻ",
     "Welcome to the pregnancy dashboard": "Chào mừng đến với Hợp phần Thai sản ",
     "Total mother in PNC_plural": "Tổng số bà mẹ mới đẻ trong khu vực",
-    "Total newborn_plural": "Tổng số trẻ sơ sinh trong khu vực"
+    "Total newborn_plural": "Tổng số trẻ sơ sinh trong khu vực",
+    "Admin": "Quản trị viên",
+    "ANC Visit": "Khám thai",
+    "Birth Report": "Báo cáo Sinh",
+    "Death Report": "Báo cáo Tử",
+    "Delivery Planning": "Dự kiến Địa điểm sinh",
+    "Departure Code": "Mã Chuyển nơi ở",
+    "Departure Report": "Báo cáo Chuyển nơi ở",
+    "Home ANC Visit": "Thăm tại nhà",
+    "Location unit": "Địa điểm",
+    "Location unit group": "Nhóm Địa điểm",
+    "Newborn Report": "Báo cáo Sơ sinh",
+    "Nutrition Registration": "Đăng ký Dinh dưỡng",
+    "PNC Report": "Báo cáo Sau sinh",
+    "Postnatal and Newborn Care": "Chăm sóc sau sinh",
+    "Pregnancy Detection": "Phát hiện thai mới",
+    "Pregnancy Registration": "Đăng ký",
+    "Red Alert Report": "Báo động đỏ",
+    "Refusal Report": "Báo cáo Từ chối tham gia",
+    "Response Report": "Báo cáo phản hồi",
+    "Social Determinants": "Yếu tố gia đình",
+    "Team management": "Quản lý nhóm",
+    "Teams assignment": "Phân nhóm",
+    "Update Nutrition Registration": "Cập nhật Đăng ký dinh dưỡng",
+    "Update Pregnancy Detection": "Cập nhật Phát hiện thai mới",
+    "User groups": "Nhóm người dùng",
+    "User Management": "Quản lý người dùng",
+    "User roles": "Vai trò trên trang",
+    "Locations": "Dịa điểm"
 }
